# ola

./: .gitignore  .ocamlformat  README.md  dune  dune-project  ola.opam  shell.nix
.github/workflows/: build.yml  deploy.yml
api/: index.html
api/ola/: index.html
coverage/: index.html
coverage/src/: ast.ml.html  env.ml.html  evaluator.ml.html  interpret.ml.html  interpreter.ml.html  lua_stdlib.ml.html  scope.ml.html  (+11 more)
docs/: README.md
examples/: README.md  dune  even_odd.lua  even_odd.t  factorial.lua  factorial.t  fibonacci.lua  fibonacci.t  hanoi.lua  hanoi.t  hello.lua  life.lua  metatable_cst.lua  metatable_cst.t  oop.lua  oop.t  oop_advanced.lua  oop_advanced_1.lua  oop_advanced_1.t  oop_advanced_2.lua  oop_advanced_2.t  table.lua  table.t
src/: ast.ml  bisect.exclude  dune  env.ml  env.mli  evaluator.ml  evaluator.mli  interpret.ml  interpret.mli  interpreter.ml  interpreter.mli  lexer.ml  lexer.mli  lua_stdlib.ml  lua_stdlib.mli  lua_stdlib_basic.ml  lua_stdlib_common.ml  lua_stdlib_io.ml  lua_stdlib_math.ml  lua_stdlib_os.ml  lua_stdlib_package.ml  parser.mly  scope.ml  scope.mli  static_analysis.ml  static_analysis.mli  static_analysis_variadic_func.ml  static_analysis_variadic_func.mli  syntax.ml  table.ml  table.mli  table_hash.ml  typer.ml  typer.mli  utils.ml
test/: assign.lua  assign.t  assign_const.lua  basics.lua  basics.t  blocks.lua  blocks.t  closure.lua  closure.t  dune  error.lua  error.t  error_require.lua  error_require_ko.lua  function.lua  function.t  function_rec.lua  function_rec.t  function_ref.lua  function_ref.t  goto.lua  goto.t  iterators.lua  iterators.t  len.lua  len.t  metatable.lua  metatable.t  metatable_set.lua  stdlib_basic.lua  stdlib_basic.t  stdlib_math.lua  stdlib_math.t  stdlib_require.lua  stdlib_require.t  stdlib_require_mod.lua  table.lua  table.t  typer.lua  typer.t
test/import_1/: andOr.t  break.lua  break.t  callReturnedFunction.t  callingSideways.t  closures.t  concatenation.t  delegateReturn.t  dune  equalities.t  fizzbuzz.t  global.lua  global.t  ifCondition.t  iterator.t  multiArgFunction.t  multipleAssignment.t  multipleReturnArgs.t  nestedFuncs.t  numericFor.t  primes.lua  primes.t  recursiveSum.t  repeat.t  simpleFunc.t  simplePrint.t  simpleReturn.t  simpleScoping.t  sumNumbers.t  sumNumbersFunc.t  swapFuncs.t  tables.lua  tables.t  test.t  zCombinator.t  zCombinator.t.disabled
test/static_analysis/: assign_const.lua  assign_const.t  dune  variadic_func.lua  variadic_func.t
test/typer/: binop.t  bitwise_binop_float.lua  bitwise_unop_float.lua  bitwise_unop_func.lua  bitwise_unop_table.lua  dune  function_rec.lua  function_rec.t  functioncall.t  functioncall_1.lua  functioncall_2.lua  functioncall_3.lua  loop.t  loop_1.lua  loop_2.lua  loop_3.lua  metatable.t  metatable_1.lua  metatable_2.lua  metatable_3.lua  metatable_4.lua  metatable_5.lua  metatable_6.lua  metatable_7.lua  metatable_8.lua  metatable_9.lua  num_of_str.lua  table.lua  table.t  typer.t  unop.t  variadic_func.t
(+17 files in other folders)
