(library
 (name ola)
 (modules
  ast
  env
  interpret
  lexer
  lua_stdlib
  lua_stdlib_basic
  lua_stdlib_common
  lua_stdlib_io
  lua_stdlib_math
  lua_stdlib_os
  parser
  scope
  table
  typer)
 (preprocess
  (pps sedlex.ppx))
 (libraries sedlex menhirLib)
 (instrumentation
  (backend bisect_ppx --exclusions src/bisect.exclude)
  (deps bisect.exclude)))

(menhir
 (modules parser))
