(cram
 (deps
  assign.lua
  basics.lua
  blocks.lua
  closure.lua
  error_require_ko.lua
  error_require.lua
  error.lua
  function_rec.lua
  function_ref.lua
  function.lua
  goto.lua
  iterators.lua
  len.lua
  metatable.lua
  stdlib_basic.lua
  stdlib_math.lua
  stdlib_require_mod.lua
  stdlib_require.lua
  table.lua))
