(cram
 (deps
  bitwise_binop_float.lua
  bitwise_unop_float.lua
  bitwise_unop_func.lua
  bitwise_unop_table.lua
  functioncall_1.lua
  functioncall_2.lua
  functioncall_3.lua
  metatable_1.lua
  metatable_2.lua
  metatable_3.lua
  metatable_4.lua
  metatable_5.lua
  metatable_6.lua
  metatable_7.lua
  metatable_8.lua
  table.lua
  typer.lua))
